<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Modo_juego"
    tools:context=".Sala_Online">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="@color/toolbar_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@android:color/white" />


    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Toolbar_Sala_Online"
        android:textColor="@android:color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.588" />


    <ImageButton
        android:id="@+id/flecha_atras"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toStartOf="@+id/toolbar_title"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        app:srcCompat="@drawable/flecha" />

    <TextView
        android:id="@+id/crear_sala_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/Crear_sala_texto"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.133" />

    <View
        android:id="@+id/view"
        android:layout_width="234dp"
        android:layout_height="72dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />


    <TextView
        android:id="@+id/textView17"
        android:layout_width="187dp"
        android:layout_height="45dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/Sala_codigo_texto"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/button_crear_sala"
        android:layout_width="302dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/boton_ciencia"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Crear_sala_btn"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="80dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toTopOf="@+id/crear_sala_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:srcCompat="@drawable/logo_quizzhub" />


    <View
        android:id="@+id/view2"
        android:layout_width="246dp"
        android:layout_height="76dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/boton_entretenimiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/text_ingresa_codigo"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/Ingresa_Texto"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.416" />


    <View
        android:id="@+id/view3"
        android:layout_width="325dp"
        android:layout_height="167dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />


    <TextView
        android:id="@+id/introduce_numero_sala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/Introduce_numero_sala"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/hint_name"
        android:layout_width="281dp"
        android:layout_height="41dp"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_numero_sala"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/introduce_numero_sala" />

    <Button
        android:id="@+id/button_unir_sala"
        android:layout_width="259dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/boton_historia"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Unirse_sala_btn"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.166" />


</androidx.constraintlayout.widget.ConstraintLayout>