<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resultados_Activity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="859dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fondologin" />

    <View
        android:id="@+id/viewprofile"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_view"
        app:layout_constraintBottom_toTopOf="@+id/viewestadisticas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <View
        android:id="@+id/view4"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:alpha="0.7"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/Azul_textedit"
        app:layout_constraintBottom_toTopOf="@+id/viewprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />




    <View
        android:id="@+id/viewestadisticas"
        android:layout_width="332dp"
        android:layout_height="271dp"
        android:background="@drawable/rounded_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.691" />


    <Button
        android:id="@+id/button_jugar_de_nuevo"
        android:layout_width="280dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/Boton_jugar"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/PLay_Again"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <Button
        android:id="@+id/button_volver_menu"
        android:layout_width="280dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/boton_ciencia"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Return_menu"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <Button
        android:id="@+id/button_ver_ranking"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/boton_historia"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Show_Lobby_Ranking"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <View
        android:id="@+id/view5"
        android:layout_width="331dp"
        android:layout_height="45dp"
        android:alpha="0.9"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/Azul_textedit"
        app:layout_constraintBottom_toBottomOf="@+id/viewestadisticas"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/viewestadisticas"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/Result_Correct_Answer"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewestadisticas"
        app:layout_constraintEnd_toEndOf="@+id/viewestadisticas"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="@+id/viewestadisticas"
        app:layout_constraintTop_toTopOf="@+id/viewestadisticas"
        app:layout_constraintVertical_bias="0.273" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/Result_Incorrect_Answer"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewestadisticas"
        app:layout_constraintEnd_toEndOf="@+id/viewestadisticas"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="@+id/viewestadisticas"
        app:layout_constraintTop_toTopOf="@+id/viewestadisticas"
        app:layout_constraintVertical_bias="0.551" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/viewestadisticas"
        app:layout_constraintEnd_toEndOf="@+id/viewestadisticas"
        app:layout_constraintTop_toTopOf="@+id/viewestadisticas"
        app:layout_constraintVertical_bias="0.57"
        app:srcCompat="@drawable/cruceta" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="29dp"
        android:layout_height="27dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/viewestadisticas"
        app:layout_constraintEnd_toEndOf="@+id/viewestadisticas"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="@+id/viewestadisticas"
        app:layout_constraintTop_toTopOf="@+id/viewestadisticas"
        app:layout_constraintVertical_bias="0.278"
        app:srcCompat="@drawable/pngegg" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Result"
        android:textColor="@color/white"
        android:textSize="35dp"

        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Marks"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/viewprofile"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Resume"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/viewestadisticas" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewestadisticas"
        app:layout_constraintEnd_toEndOf="@+id/viewestadisticas"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="@+id/viewestadisticas"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewestadisticas"
        app:layout_constraintEnd_toEndOf="@+id/viewestadisticas"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="@+id/viewestadisticas"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintVertical_bias="0.451" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="1234 pts"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewprofile"
        app:layout_constraintEnd_toEndOf="@+id/viewprofile"
        app:layout_constraintStart_toStartOf="@+id/viewprofile"
        app:layout_constraintTop_toTopOf="@+id/viewprofile" />


</androidx.constraintlayout.widget.ConstraintLayout>